<resources>
    <string name="No_ScriptLog">暂无脚本日志</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateCheck">2.4.1.20140228</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="aa">@string/ad_delete_btn</string>
    <string name="aabbcc">aabbcc</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abgame_down_count">%s次下载</string>
    <string name="abgame_down_size">下载 ( %s )</string>
    <string name="accessibility_service_description">此服务仅用于开机自启功能，应用不会收集您的数据，请放心使用。</string>
    <string name="action_cant_be_completed">The requested action could not be completed.</string>
    <string name="action_settings">Settings</string>
    <string name="activation_code">注册码激活</string>
    <string name="activation_code_suc">注册码激活成功</string>
    <string name="activation_registration">激活注册码</string>
    <string name="ad_delete_btn">点击关闭 | %d 秒</string>
    <string name="ad_source_mark">%s广告</string>
    <string name="adactivity_missing">%s was not detected in AndroidManifest.xml!</string>
    <string name="adactivity_no_type">AdActivity launched with no type.</string>
    <string name="adsail_app_name">sdk</string>
    <string name="adsail_notification_title">正在下载 %1$s</string>
    <string name="adsail_notification_title_more">正在下载 %1$s 等 %2$d 个文件</string>
    <string name="adsail_notification_title_more_wait">等待下载 %1$s 等 %2$d 个文件</string>
    <string name="adsail_notification_title_wait">等待下载 %1$s</string>
    <string name="adsail_splash_download_desc">应用名称：京东 | 应用版本：12.1.0 | 开发者：北京京东世纪贸易有限公司 | 权限详情> | 隐私协议 > | 功能介绍 ></string>
    <string name="adsize_too_big" formatted="false">E103: You requested an Ad larger than the measured ad space. Ad space size: %dx%d, request size: %dx%d</string>
    <string name="all_photo_mobile">所有的图片</string>
    <string name="allow">Allow</string>
    <string name="already_bind_project_number">已绑定的项目编号</string>
    <string name="already_binding">已绑定</string>
    <string name="already_expanded">Cannot load a new ad while the current ad is expanded. onAdRequestFailed will not be called</string>
    <string name="anythink_basead_ad_text">AD</string>
    <string name="anythink_basead_click_empty">This ads does not support click to open</string>
    <string name="anythink_basead_click_fail">Failed to open Ads</string>
    <string name="anythink_cm_app_info_app_label">AD</string>
    <string name="anythink_cm_app_info_app_name">App:</string>
    <string name="anythink_cm_app_info_publish">Publisher:</string>
    <string name="anythink_cm_app_info_update_time">Update:</string>
    <string name="anythink_cm_app_info_version">Ver:</string>
    <string name="anythink_cm_click_for_detail">Click now for details</string>
    <string name="anythink_cm_dialog_alert_cancel_close">Continue</string>
    <string name="anythink_cm_dialog_alert_confim_close">Close it</string>
    <string name="anythink_cm_dialog_alert_confim_close_cancel">Cancel</string>
    <string name="anythink_cm_dialog_alert_confim_close_continue">Continue</string>
    <string name="anythink_cm_dialog_alert_confim_close_desc">You will not be rewarded after closing the window</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn">Confirm to close?</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn_close">If you choose to continue, you will receive a reward after the end. Confirm closed?</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn_continue">If you choose to continue, you will receive a reward after the end. Whether to continue?</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn_tips">Tips</string>
    <string name="anythink_cm_dialog_alert_continue_to_play">Continue</string>
    <string name="anythink_cm_feedback_btn_text">feedback</string>
    <string name="anythink_cm_feedback_dialog_close_close">Close</string>
    <string name="anythink_cm_feedback_dialog_close_submit">Submit</string>
    <string name="anythink_cm_feedback_dialog_content_balck_screen">Black screen</string>
    <string name="anythink_cm_feedback_dialog_content_cnr">Click no response</string>
    <string name="anythink_cm_feedback_dialog_content_other">Other issues</string>
    <string name="anythink_cm_feedback_dialog_content_stuck">Video stuck</string>
    <string name="anythink_cm_feedback_dialog_title">feedback</string>
    <string name="anythink_cm_segment_process_bar_hint_text" formatted="false">The %s is playing, %s videos.</string>
    <string name="anythink_cm_segment_process_bar_hint_text_lite" formatted="false">ADS %s/%s</string>
    <string name="anythink_cm_shake_view_click_default_inst">Install</string>
    <string name="anythink_cm_shake_view_click_default_open">Open</string>
    <string name="anythink_cm_shake_view_click_default_view">View</string>
    <string name="anythink_cm_shake_view_hint_text">Shake your phone</string>
    <string name="anythink_cm_shake_view_view_other_app">Redirect to third party application</string>
    <string name="anythink_cm_video_auto_play_after">Auto play after</string>
    <string name="anythink_confirm_dialog_application_permission">permission</string>
    <string name="anythink_confirm_dialog_download_now">Download</string>
    <string name="anythink_confirm_dialog_give_up">Give up</string>
    <string name="anythink_confirm_dialog_privacy_agreement">privacy</string>
    <string name="anythink_confirm_dialog_publisher">%s</string>
    <string name="anythink_confirm_dialog_version">v%s</string>
    <string name="anythink_interstitial_text_loading_default">The ad is loading...</string>
    <string name="anythink_location_allow">Allow</string>
    <string name="anythink_location_ask_title">Allow access your location？</string>
    <string name="anythink_location_deny">Disallow</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_continue">Continue</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_msg">Watch the ad for %s seconds to get rewards, are you sure you want to leave?</string>
    <string name="anythink_myoffer_confirm_msg">Open</string>
    <string name="anythink_myoffer_continue">Continue</string>
    <string name="anythink_myoffer_count_down_finish_rewarded">You have been rewarded</string>
    <string name="anythink_myoffer_count_down_to_rewarded">View for &lt;font color=#FFFFFF>%d&lt;/font> seconds to get the reward</string>
    <string name="anythink_myoffer_cta_install_now">Install Now</string>
    <string name="anythink_myoffer_cta_learn_more">Learn More</string>
    <string name="anythink_myoffer_feedback_abnormal">Abnormal</string>
    <string name="anythink_myoffer_feedback_black_white_screen">Show Failed</string>
    <string name="anythink_myoffer_feedback_can_not_close">Not Close</string>
    <string name="anythink_myoffer_feedback_fraud_ads">Fraud Ads</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text1">Ignore ads to view details</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text2">continue when you return</string>
    <string name="anythink_myoffer_g2c_jump_confirm_ignore">Ignore</string>
    <string name="anythink_myoffer_g2c_question_dialog_default_answer">AD</string>
    <string name="anythink_myoffer_g2c_question_dialog_hint">Note: Please select and browse the relevant content</string>
    <string name="anythink_myoffer_g2c_question_dialog_title">Which option does the video content relate to?</string>
    <string name="commit_feedback_info">提交反馈</string>
    <string name="devices_info">设备信息</string>
    <string name="et_feedback_info_hint">用起来不顺心？想要吐槽！提出宝贵意见！ 那就提出来并留下联系方式等我们CALL你吧！</string>
    <string name="feedback_browse">反馈预览</string>
    <string name="feedback_btn_back">返回</string>
    <string name="feedback_btn_commit">提交</string>
    <string name="feedback_num_hint">已输入%1$d字(300字以内)</string>
    <string name="feedback_problem_des">问题描述：</string>
    <string name="hidefw_cancel">取消</string>
    <string name="hidefw_ok">确定</string>
    <string name="hidefw_tip_content">隐藏浮窗后可通过启动功能呼出</string>
    <string name="hidefw_tip_title">隐藏浮窗</string>
    <string name="image_add">添加图片(最多上传%1$d/4张)</string>
    <string name="miuiguide_open">立即开启</string>
    <string name="miuiguide_show_dock">显示悬浮窗</string>
    <string name="miuiguide_subtitle">开启悬浮窗后获得更好的体验</string>
    <string name="miuiguide_title">您的设备需要手动开启悬浮窗</string>
    <string name="qq_tel_fill_hint">请输入您的QQ号/手机号</string>
    <string name="update_dialog_dowloading">正在下载</string>
    <string name="update_dialog_new_version">发现新版本</string>
    <string name="update_dialog_next_time">下次再说</string>
    <string name="update_dialog_update_now">立即更新</string>
</resources>