<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/bg_white_translucent" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hidefw_tip_title" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hidefw_tip_content" android:layout_weight="1.0" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textColor="@color/gray2" android:id="@id/hidefw_button_cancel" android:background="@drawable/scriptui_button_bg_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dp" android:minHeight="35.0dp" android:text="@string/hidefw_cancel" android:layout_weight="1.0" />
        <Button android:textColor="@color/blue1" android:id="@id/hidefw_button_ok" android:background="@drawable/scriptui_button_bg_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="35.0dp" android:text="@string/hidefw_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
