<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#f2ffffff" android:paddingLeft="16.0dp" android:paddingRight="10.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/id_rl_title" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/blue" android:id="@id/id_tv_feedback_look" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dp" android:layout_marginBottom="18.0dp" android:text="@string/feedback_browse" />
        <View android:background="@color/blue" android:layout_width="match_parent" android:layout_height="0.5dp" />
    </LinearLayout>
    <ScrollView android:id="@id/id_scroll_view" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dp">
                <TextView android:textSize="14.0sp" android:textColor="@color/blank" android:id="@id/id_tv_device_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/devices_info" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dp">
                <TextView android:textSize="14.0sp" android:textColor="@color/blank" android:id="@id/id_tv_device_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dp">
                <TextView android:textSize="14.0sp" android:textColor="@color/blank" android:id="@id/id_tv_device_system" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dp">
                <TextView android:textSize="14.0sp" android:textColor="@color/blank" android:id="@id/id_tv_device_root" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dp">
                <TextView android:textSize="14.0sp" android:textColor="@color/blank" android:id="@id/id_tv_feedback_problem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_problem_des" />
                <TextView android:textSize="12.0sp" android:textColor="@color/blank" android:id="@id/id_tv_feedback_content" android:background="@drawable/bg_feedback_fill" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="250.0dp" android:layout_marginTop="10.0dp" android:hint="@string/et_feedback_info_hint" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dp" android:layout_marginBottom="18.0dp">
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/id_btn_back" android:background="@drawable/bg_btn_select" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginRight="10.0dp" android:minHeight="36.0dp" android:text="@string/feedback_btn_back" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/id_btn_commit_feedback_info" android:background="@drawable/bg_btn_select" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:minHeight="36.0dp" android:text="@string/feedback_btn_commit" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
