<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/anythink_myoffer_g2c_question_dialog_bg" android:paddingLeft="20.0dp" android:paddingTop="26.0dp" android:paddingRight="20.0dp" android:paddingBottom="14.0dp" android:layout_width="260.0dp" android:layout_height="wrap_content">
        <TextView android:textSize="14.0dp" android:textColor="#000000" android:gravity="center" android:id="@id/anythink_myoffer_g2c_question_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_g2c_question_dialog_title" />
        <TextView android:textSize="18.0dp" android:textColor="#ffffff" android:ellipsize="end" android:gravity="center" android:id="@id/anythink_myoffer_g2c_question_answer1" android:background="@drawable/anythink_myoffer_g2c_question_dialog_cta_bg" android:paddingLeft="20.0dp" android:paddingRight="20.0dp" android:layout_width="match_parent" android:layout_height="48.0dp" android:layout_marginTop="18.0dp" android:text="@string/anythink_myoffer_g2c_question_dialog_default_answer" android:maxLines="1" />
        <TextView android:textSize="18.0dp" android:textColor="#ffffff" android:ellipsize="end" android:gravity="center" android:id="@id/anythink_myoffer_g2c_question_answer2" android:background="@drawable/anythink_myoffer_g2c_question_dialog_cta_bg" android:paddingLeft="20.0dp" android:paddingRight="20.0dp" android:layout_width="match_parent" android:layout_height="48.0dp" android:layout_marginTop="18.0dp" android:maxLines="1" />
        <TextView android:textSize="12.0dp" android:textColor="#99000000" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:text="@string/anythink_myoffer_g2c_question_dialog_hint" />
    </LinearLayout>
</merge>
