<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="@color/blue1" android:id="@id/id_complaints_qq" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="12.0dp" android:layout_marginBottom="10.0dp" />
        <View android:id="@id/id_line" android:background="@color/gray5" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.5dp" />
        <EditText android:textSize="14.0sp" android:textColor="@color/blank1" android:gravity="center_vertical" android:id="@id/id_et_qq_phone" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="12.0dp" android:layout_marginBottom="12.0dp" android:hint="@string/qq_tel_fill_hint" android:singleLine="true" android:inputType="number" />
        <View android:background="@color/gray5" android:layout_width="match_parent" android:layout_height="0.5dp" />
        <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/dp_230">
            <EditText android:textAppearance="?android:textAppearanceSmall" android:gravity="top" android:id="@id/id_et_feedback" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="16.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="16.0dp" android:hint="@string/et_feedback_info_hint" android:maxLength="300" android:inputType="textMultiLine" />
            <TextView android:textSize="12.0sp" android:textColor="@color/gray2" android:id="@id/id_tv_feedback_input_font_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dp" android:layout_marginBottom="10.0dp" android:hint="@string/feedback_num_hint" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="#f3f3f7" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <TextView android:textSize="12.0sp" android:textColor="@color/gray2" android:id="@id/id_tv_image_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:text="@string/image_add" />
        <GridView android:id="@id/grid_view" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginLeft="16.0dp" android:listSelector="@android:color/transparent" android:cacheColorHint="@android:color/transparent" android:horizontalSpacing="5.0dp" android:verticalSpacing="5.0dp" android:stretchMode="columnWidth" android:numColumns="3" android:layout_weight="1.0" />
        <RelativeLayout android:gravity="center" android:background="@color/blue1" android:layout_width="match_parent" android:layout_height="36.0dp" android:layout_marginLeft="16.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="16.0dp" android:layout_marginBottom="10.0dp">
            <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/id_btn_commit_feedback" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/commit_feedback_info" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
