<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_white" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" android:text="@string/update_dialog_new_version" />
    <View android:background="@color/gray4" android:layout_width="match_parent" android:layout_height="0.5dp" />
    <TextView android:textColor="@color/gray4" android:id="@id/update_dialog_textview_size" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="TextView" />
    <ScrollView android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/update_dialog_textview_updatecontent" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Medium Text" />
    </ScrollView>
    <LinearLayout android:gravity="center_vertical" android:id="@id/update_dialog_linearlayout_download" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dp">
        <RelativeLayout android:orientation="vertical" android:paddingTop="5.0dp" android:paddingBottom="5.0dp" android:layout_width="0.0dp" android:layout_height="@dimen/dp_40" android:layout_weight="1.0">
            <TextView android:textSize="13.0sp" android:textColor="@color/blank" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_dialog_dowloading" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <TextView android:textSize="13.0sp" android:textColor="@color/blank" android:id="@id/update_dialog_textview_downloadprogress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            <ProgressBar android:id="@id/update_dialog_progressBar" android:layout_width="match_parent" android:layout_height="5.0dp" android:max="100" android:progress="0" android:progressDrawable="@drawable/textprogressbar" android:layout_alignParentBottom="true" style="@android:style/Widget.Holo.ProgressBar.Horizontal" />
        </RelativeLayout>
        <Button android:textColor="@android:color/white" android:id="@id/update_dialog_button_cancel" android:background="@drawable/button_gray_corner" android:layout_width="80.0dp" android:layout_height="40.0dp" android:layout_marginLeft="10.0dp" android:text="取消" />
    </LinearLayout>
    <Button android:id="@id/update_dialog_button_forceupdate" android:background="@drawable/button_blue_corner" android:layout_marginLeft="0.0dp" android:layout_marginRight="0.0dp" android:text="@string/update_dialog_update_now" style="@style/button" />
    <LinearLayout android:id="@id/update_dialog_linearlayout_update" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp">
        <Button android:id="@id/update_dialog_button_nexttime" android:background="@drawable/button_gray_corner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dp" android:text="@string/update_dialog_next_time" android:layout_weight="1.0" style="@style/button" />
        <Button android:id="@id/update_dialog_button_updatenow" android:background="@drawable/button_blue_corner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dp" android:layout_marginRight="0.0dp" android:text="@string/update_dialog_update_now" android:layout_weight="1.0" style="@style/button" />
    </LinearLayout>
</LinearLayout>
